DaemonSet.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemon
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
            
 # DaemonSet ensures the one specific pod runs on every node.
 # useful in monitoring, logging, security ajents like Falcon.
 # How would you deploy a monitoring agent across all nodes?
 # I would use DaemonSet so that one pod runs on each node automatically. This ensures consistent monitoring coverage even when the nodes added or removed.
