PersistentVolumeClaim.yml
---
# example to attach with the pod
apiVersion: v1
kind: Pod
metadata:
  name: pod-app
spec:
  container:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: app-storage          # Provide name for the volume mount
          mountPath: "/usr/share/nginx/html" # The file inside the pod ie, going to attach with PV
  volumes:
    - name: app-storage   # Name of the volume mount             
      PersistentVolumeClaim:
        claimName: pvc-example # Name of the PVC to attach with
        
# PVC will search for the available PV with provided requirments and bind with it.
